project(zui)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g")
include_directories(${CMAKE_SOURCE_DIR}/ZUI ${CMAKE_SOURCE_DIR}/zlib ${CMAKE_SOURCE_DIR}/duktape)
add_subdirectory(zlib)
add_subdirectory(AGG)
add_subdirectory(duktape)
add_subdirectory(libuv)
add_subdirectory(dukluv)
aux_source_directory(./ZUI/control control)
aux_source_directory(./ZUI/core core)
aux_source_directory(./ZUI/layout layout)
add_executable(zui ${control} ${core} ${layout})
set_target_properties(zui PROPERTIES output_name "zui")
